      winx_get_file_contents, winx_create_directory, winx_delete_file,
      winx_create_path, winx_path_remove_extension, winx_path_remove_filename,
      winx_path_extract_filename, winx_get_module_filename,
      winx_get_windows_directory, winx_set_dbg_log, udefrag_dbg_print
      prototypes changed
    - obsolete WgxDbgPrint, WgxDbgPrintLastError routines
      removed from wgx library
    - WgxSetDbgPrintHandler routine superseded by WgxSetInternalTraceHandler
    - WgxDisplayLastError prototype changed
    - WgxSetTaskbarProgressState, WgxSetTaskbarProgressValue, wgx_sprintf,
      wgx_vsprintf, wgx_swprintf, wgx_vswprintf routines added to wgx library
    - Windows Server 2003 DDK support dropped because of lack of variadic macros
      support there - use Windows Driver Kit v7.1.0 instead

    beta1:
    - all the disk processing algorithms were reimplemented
      to reach better efficiency and shorter processing times
    - FAT optimization was implemented
    - ability to sort files on the disk by the disk optimization was added;
      files can be sorted by path, size, creation time, last modification time,
      last access time - in eighter ascending or descending order
    - ability to filter out files by size of their fragments was added
      (fragment_size_threshold option in GUI; UD_FRAGMENT_SIZE_THRESHOLD
      environment variable in command line tool and boot time interface)
    - ability to tune the disk optimization by UD_OPTIMIZER_FILE_SIZE_THRESHOLD
      environment variable (optimizer_file_size_threshold GUI option) was added
    - ability to suspend/resume the running job was added to GUI
    - ability to minimize the program to the taskbar notification
      area (system tray) was added; it can be turned on/off by
      minimize_to_system_tray GUI option
    - MFT optimization was forced to do nothing silently on non-NTFS disks
    - quite useless cyan color removed from the cluster map